# optimal_classification_cutoffs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  demo_piecewise_optimization.py  metrics.py  optimal_cut_offs.py  pydoclint-baseline.txt  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml  release.yml
docs/: advanced.rst  conf.py  examples.rst  faq.rst  generate_plots.py  index.rst  installation.rst  quickstart.rst  requirements.txt  theory.rst  user_guide.rst
docs/api/: core.rst  cv.rst  index.rst  metrics.rst  multiclass.rst  wrapper.rst
docs/examples/: 01_quickstart.ipynb  02_business_value.ipynb  03_multiclass.ipynb  04_interactive_demo.ipynb
examples/: 01_quickstart.py  02_business_value.py  03_multiclass.py  04_interactive_demo.ipynb  advanced_usage.ipynb  basic_usage.py  multiclass_averaging_demo.py  multiclass_usage.py  piecewise_visualization.ipynb
examples/archive/: advanced_usage.ipynb  another_example.ipynb  comscore.ipynb  multiclass_averaging_demo.py
optimal_cutoffs/: __init__.py  api.py  bayes.py  bayes_core.py  binary.py  binary_optimization.py  core.py  cv.py  expected.py  expected_fractional.py  handlers.py  metrics.py  metrics_core.py  multiclass.py  multiclass_coord.py  multiclass_optimization.py  multilabel.py  numba_utils.py  optimize.py  optimizers.py  piecewise.py  results.py  results.py.backup  routers.py  strategies.py  types.py  types_minimal.py  validation.py  wrapper.py  wrapper.py.backup
optimal_cutoffs/cv/: __init__.py
scripts/: ci-simulation.sh  test_ci_local.sh
tests/: README.md  __init__.py  conftest.py  fixtures.py  pytest.ini  strategies.py  test_api_2_0.py  test_averaging_identities.py  test_bayes_multiclass.py  test_binary_degenerate.py  test_binary_inclusive_vs_exclusive.py  test_binary_sort_scan.py  test_binary_weights.py  test_coherence_improvements.py  test_comparison_operators.py  test_comprehensive_bug_fixes.py  test_cost_benefit_optimization.py  test_critical_bug_fixes.py  test_cv_selection.py  test_determinism.py  test_dinkelbach.py  test_dinkelbach_expected_f1.py  test_edge_cases.py  test_expected_generalized.py  test_extreme_edge_cases.py  test_fallback_robustness.py  test_hypothesis_adversarial.py  test_metrics.py  test_multiclass.py  test_multiclass_averaging.py  test_multiclass_coord.py  test_multiclass_coord_ascent.py  test_multiclass_coord_refactored.py  test_multiclass_exclusive_vs_ovr.py  test_optimizers.py  test_performance_benchmarks.py  test_piecewise.py  test_piecewise_score_workflows.py  test_property_based.py  test_realistic_integration.py  (+10 more)
tests/algorithms/: __init__.py  test_api_mode_parameters.py  test_bayes_edge_cases.py  test_bayes_multiclass.py  test_coherence_improvements.py  test_coordinate_ascent.py  test_coordinate_ascent_integration.py  test_coordinate_ascent_mathematical_properties.py  test_cost_benefit_optimization.py  test_dinkelbach.py  test_dinkelbach_core.py  test_dinkelbach_expected_f1.py  test_dinkelbach_mathematical_properties.py  test_dinkelbach_unit.py  test_multiclass_coord.py  test_utility_optimization.py
tests/edge_cases/: __init__.py  test_bayes_edge_cases.py  test_binary_weights.py  test_boundary_conditions.py  test_comprehensive_edge_cases.py  test_fallback_robustness.py  test_regression_minimize_fallback.py  test_tied_probabilities.py  test_weight_edge_cases.py
tests/fixtures/: __init__.py  assertions.py  data_generators.py  hypothesis_strategies.py  realistic_datasets.py
tests/integration/: test_binary_classification.py  test_comprehensive_bug_fixes.py  test_cross_validation.py  test_cross_validation_extended.py  test_cv_early_validation.py  test_cv_threshold_averaging.py  test_method_comparison.py  test_multiclass_classification.py  test_piecewise_score_workflows.py  test_realistic_integration.py  test_registry.py
tests/multiclass/: __init__.py  test_averaging_identities.py  test_binary_inclusive_vs_exclusive.py  test_multiclass.py  test_multiclass_averaging.py  test_multiclass_exclusive_vs_ovr.py  test_multiclass_single_vs_multilabel.py
tests/performance/: __init__.py  test_benchmarks.py  test_performance.py  test_performance_benchmarks.py
tests/slow/: __init__.py  test_comprehensive_scenarios.py  test_property_based.py  test_stress_testing.py
tests/unit/: test_dinkelbach.py  test_metrics.py  test_optimizers.py  test_piecewise.py  test_registry_integration.py
tests/validation/: __init__.py  test_binary_inclusive_vs_exclusive.py  test_comparison_operators.py  test_determinism.py  test_error_handling.py  test_input_validation.py  test_validation.py  test_validation_extended.py
