[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimal-classification-cutoffs"
version = "0.1.0"
description = "Utilities for computing optimal classification cutoffs"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
examples = ["matplotlib", "pandas"]

[tool.setuptools]
packages = ["optimal_cutoffs"]
